<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadClienteActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/edtNick"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/Nick"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/Senha"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNick" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edtCpf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/Telefone"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtEndereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/Endereço"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtCartao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefone" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="138dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorPrimary"
        android:onClick="cadastrarCliente"
        android:text="@string/Cadastrar"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCartao" />

    <EditText
        android:id="@+id/edtCpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/CPF"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="7dp"
        android:onClick="cancelarCadastro"
        android:text="@string/Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/edtCartao" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:ems="10"
        android:hint="@string/Nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edtTelefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCpf" />

    <EditText
        android:id="@+id/edtCartao"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:ems="10"
        android:hint="@string/NdoCartão"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEndereco" />


</android.support.constraint.ConstraintLayout>